--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,10 @@
-{
-  "name": "Générateur de Signatures",
-  "short_name": "Signatures",
-  "start_url": ".",
-  "display": "standalone",
-  "background_color": "#fff",
-  "theme_color": "#0d6efd",
-  "description": "Cette application web permet de générer des signatures personnalisées pour Office 365",
-  "icons": [
-    {
-      "src": "img/manifest/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "img/manifest/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+function copySignature() {
+    const html = document.getElementById("signaturePreview").innerHTML;
+
+    const blob = new Blob([html], { type: "text/html" });
+    const item = new ClipboardItem({ "text/html": blob });
+
+    navigator.clipboard.write([item]).then(() => {
+        alert("Signature copiée dans le presse-papier !");
+    });
 }
